--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
   font-size: 16px;
   margin-bottom: 32px;
 }
+
 .container {
   max-width: 800px;
   margin: 175px auto 0 auto;  
@@ -41,9 +42,10 @@ ul {
 
 input[type=text], 
 input[type=text]:focus {
-  color: #0a4375;
+  outline: none;
+  color: #1c315d;
   border: none;
-  background-color: rgb(190, 186, 175);
+  background-color: rgb(193, 187, 171);
   height: 48px;
   border-radius: 8px;
   width: 500px;
@@ -55,12 +57,15 @@ input[type=text]:focus {
   display: block;
   width: 128px;
   height: 32px;
-  background-color: #906000;
-  color: rgb(189, 182, 162);
+  background-color: #956d30;
+  box-shadow: inset;
+  color: rgb(247, 226, 170);
   margin: 24px auto 0 auto;
   border-radius: 8px;
   padding: 0;
-
+}
+.btn:hover {
+  background-color: #d0953c;
 }
 
 
@@ -91,5 +96,9 @@ input[type=text]:focus {
 }
 .delete {
   margin: 14px 12px 0 0;
-  color: #906000;
+  color: #956d30
 }
+.delete:hover {
+  color: #b17e32e9;
+}
+
